manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-app
  labels:
    app: apigw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigw
  template:
    metadata:
      labels:
        app: apigw
    spec:
      containers:
      - name: apigw
        image: luisgf1810/apigw:latest
        ports:
        - containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: apigw-service
spec:
  selector:
    app: apigw
  ports:
  - port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appui-app
  labels:
    app: appui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appui
  template:
    metadata:
      labels:
        app: appui
    spec:
      containers:
      - name: appui
        image: luisgf1810/appui:latest
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: appui-service
spec:
  selector:
    app: appui
  ports:
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appui-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: apigw-service
            port:
              number: 8081
---
