manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appui-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/loki"
        backend:
          service:
            name: loki
            port:
              number: 3100
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: apigw-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/list"
        backend:
          service:
            name: apigw-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/capi/api"
        backend:
          service:
            name: capi-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/capi/repositories"
        backend:
          service:
            name: capi-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/capi/init"
        backend:
          service:
            name: capi-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/capi/delete"
        backend:
          service:
            name: capi-service
            port:
              number: 8080
---
